animations, config, built-in display name placeholder, update improvements

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: NotJustNameplates
-version: '${version}'
+version: "${version}"
 main: me.youhavetrouble.notjustnameplates.NotJustNameplates
 api-version: "1.20"
 authors: ["YouHaveTrouble"]
