--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,23 @@
+# Config is subject to change, take regular backups
 nameplates:
   default:
-    text:
-      - "%player_displayname%"
+    # How often to switch betwwen frames (in ticks)
+    # If set to 0, transitions will be disabled
+    refresh-rate: 10
+
+    # Animation frames
+    frames:
+      1:
+        text: "%displayname%"
+        background: "#0000FFAA"
+      2:
+        text: "%displayname%"
+        background: "#FF0000AA"
 
     # Billboard options are as follows:
     # "center" - pivots around center point
     # "vertical" - pivots around vertical axis
     # "horizontal" - pivots around horizontal axis
     # "fixed" - no rotation
-    billboard: "center"
+    billboard: "horizontal"
 
