--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -5,3 +5,6 @@ api-version: "1.20"
 authors: ["YouHaveTrouble"]
 description: Nameplates using display entities
 website: https://youhavetrouble.me
+dependencies:
+  - name: PlaceholderAPI
+    required: false
