vanishnopacket hook and set correct load order

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -12,3 +12,10 @@ dependencies:
     required: false
   - name: PremiumVanish
     required: false
+  - name: VanishNoPacket
+    required: false
+load-after:
+  - name: PlaceholderAPI
+  - name: SuperVanish
+  - name: PremiumVanish
+  - name: VanishNoPacket
