Implement display offset, refactor scaling and upgrade version
The main change introduced is the implementation of display offset within nameplates. Previously applied scaling calculations have been refactored and simplified by using the Vector3f class. The software version has also been upgraded from 1.5.0 to 1.6.0 in preparation for release. Other minor adjustments include changing the default 'billboard' setting from 'vertical' to 'center'.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,10 +3,11 @@
 nameplates:
   default:
     refresh-rate: 10
-    billboard: "vertical"
+    billboard: "center"
     frames:
       1:
         text: "<placeholder:displayname>"
+        offset-y: 0.2
 
 messages:
   config-reloaded: "<aqua>NJN Config reloaded."
